bug fixes & inner class work